--- a/Assets/UI Toolkit/Styles/main-menu-button-style.uss
+++ b/Assets/UI Toolkit/Styles/main-menu-button-style.uss
@@ -3,7 +3,7 @@
     width: 497px;
     white-space: normal;
     background-color: rgba(111, 111, 111, 255);
-    color: rgba(197, 197, 197, 255);
+    color: rgba(182, 231, 231, 255);
     border-left-color: rgba(255, 255, 255, 255);
     border-right-color: rgba(255, 255, 255, 255);
     border-top-color: rgba(255, 255, 255, 255);
@@ -24,6 +24,7 @@
     margin-right: 40px;
     margin-top: 40px;
     margin-bottom: 40px;
+    -unity-font: url('/Assets/TextMesh Pro/Examples & Extras/Fonts/Bangers.ttf');
 }
 
 .button-style:hover {
