--- a/Assets/UI Toolkit/Styles/main-menu-button-style.uss
+++ b/Assets/UI Toolkit/Styles/main-menu-button-style.uss
@@ -2,12 +2,12 @@
     height: 209px;
     width: 497px;
     white-space: normal;
-    background-color: rgba(111, 111, 111, 255);
-    color: rgba(182, 231, 231, 255);
-    border-left-color: rgba(255, 255, 255, 255);
-    border-right-color: rgba(255, 255, 255, 255);
-    border-top-color: rgba(255, 255, 255, 255);
-    border-bottom-color: rgba(255, 255, 255, 255);
+    background-color: rgb(111, 111, 111);
+    color: rgb(182, 231, 231);
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
     border-left-width: 0;
     border-right-width: 0;
     border-top-width: 0;
@@ -114,7 +114,7 @@
     -unity-font-style: bold;
     font-size: 55px;
     background-color: rgba(67, 67, 67, 0.56);
-    color: rgb(121, 226, 255);
+    color: rgb(162, 168, 246);
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
     border-top-right-radius: 30px;
@@ -131,7 +131,7 @@
     -unity-font-style: bold;
     font-size: 60px;
     background-color: rgba(67, 67, 67, 0.72);
-    color: rgb(66, 214, 255);
+    color: rgb(124, 133, 255);
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
     border-top-right-radius: 30px;
