--- a/Assets/Prefabs/UI/2DBodyTrackingTemplate.uxml
+++ b/Assets/Prefabs/UI/2DBodyTrackingTemplate.uxml
@@ -1,6 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" ml="UnityEditor.XR.MagicLeap" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="/Assets/UI Toolkit/Styles/2d-scene.uss" />
     <ui:VisualElement name="Background" style="flex-grow: 1; justify-content: flex-end; align-items: center; border-left-color: rgba(0, 0, 0, 0); border-right-color: rgba(0, 0, 0, 0); border-top-color: rgba(0, 0, 0, 0); border-bottom-color: rgba(0, 0, 0, 0);">
-        <ui:Button text="Uzņemt foto" display-tooltip-when-elided="true" name="takePhoto_button" class="take-photo-button" style="flex-basis: auto; opacity: 1; border-left-width: 11px; border-right-width: 11px; border-top-width: 11px; border-bottom-width: 11px;" />
+        <ui:VisualElement name="ButtonBackground" style="justify-content: center; align-items: center; width: 100%; height: 10%; background-color: rgb(34, 34, 34); border-top-left-radius: 0; border-bottom-left-radius: 0; border-top-right-radius: 0; border-bottom-right-radius: 0;">
+            <ui:Button text="Uzņemt foto" display-tooltip-when-elided="true" name="takePhoto_button" class="take-photo-button" style="flex-basis: auto; opacity: 1; border-left-width: 11px; border-right-width: 11px; border-top-width: 11px; border-bottom-width: 11px; bottom: auto;" />
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
