--- a/Assets/UI Toolkit/Styles/3D_bodyTracking_StyleSheets.uss
+++ b/Assets/UI Toolkit/Styles/3D_bodyTracking_StyleSheets.uss
@@ -1,23 +1,10 @@
 .whichToTrack_toggleText {
     flex-grow: 1;
-    color: rgb(35, 118, 128);
-    display: flex;
-    border-left-width: 0;
-    border-right-width: 0;
-    border-top-width: 0;
-    border-bottom-width: 0;
-    width: 20%;
-    font-size: 31px;
-    -unity-text-align: lower-center;
-    -unity-font-style: bold;
+    font-size: 32px;
+    -unity-text-align: middle-center;
 }
 
-.whichToTrack_toggle {
-    flex-shrink: 1;
-    flex-grow: 1;
-    align-items: stretch;
-    width: auto;
-    margin-right: 0;
-    padding-right: 0;
-    padding-left: 8%;
+.whichToTrack_toggleButton {
+    background-color: rgba(255, 0, 0, 255);
+    -unity-background-image-tint-color: rgba(255, 0, 0, 255);
 }
